@@ -1,3 +1,9 @@
+2000-04-03  Jeffrey Altman <jaltman@columbia.edu>
+
+        * prof_get.c: 
+          . Added #include <limits.h> for definitions of INT_MAX, etc.
+          . Changed 'ret_int' to 'ret_boolean' in prof_get_boolean
+
 2000-03-24  Miro Jurisic  <meeroh@mit.edu>
 
 	* prof_get.c: Added prof_get_boolean and changed prof_get_integer
